--- a/index.html
+++ b/index.html
@@ -5,17 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-    <title>Pokemon App</title>
+    <link rel="shortcut icon" type="image/svg" href="favicon.svg">
+    <title>Pokédex</title>
   </head>
   <body>
     <div class="container">
-          <ul class="pokemon-list"></ul>
+      <h1 style="margin-bottom: 32px; font-size: 32px; font-weight:600; letter-spacing: 1.5px;">Pokédex</h1>
+
+      <h3>About:</h3>
+      <p>This program retrieves Pokémon information from an api. Click any name to see its profile!
+
+      </p>
+      <input type="text" id="search" onkeyup="search()" placeholder="Search for names..">
+
+          <ul id="pokemon-list" class="pokemon-list"></ul>
     </div>
     <div class="modal fade" id="pokemon-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title">Pokemon Name</h5>
+            <h5 class="modal-title">Pokémon Name</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
